--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "vincent",
   "email": "alfa.king+ai@gmail.com",
   "license": "MIT",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "jsnext:main": "dist/index.es.js",
+  "main": "index.js",
+  "module": "index.es.js",
+  "jsnext:main": "index.es.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wafersystems/react-contacts.git"
