--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-contacts",
-  "version": "0.0.26",
+  "name": "infinitus-custom-contacts2",
+  "version": "0.0.2",
   "private": false,
   "author": "vincent",
   "email": "alfa.king+ai@gmail.com",
