--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "dependencies": {
     "antd": "^4.8.5",
     "classnames": "^2.2.6",
+    "immutability-helper": "^3.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
