--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-contacts",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "private": false,
   "author": "vincent",
   "email": "alfa.king+ai@gmail.com",
@@ -21,6 +21,7 @@
     "menu"
   ],
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "antd": "^4.8.5",
     "classnames": "^2.2.6",
     "immutability-helper": "^3.1.1",
